--- a/about.html
+++ b/about.html
@@ -18,12 +18,12 @@ href="./styles.css"
    
     <section> <!--Navbar-->
     
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top custom-navbar">
             <div class="container-fluid">
-               <div class="px-2"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-bar-chart" viewBox="0 0 16 16">
+               <div class="px-2"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="lightblue" class="bi bi-bar-chart" viewBox="0 0 16 16">
                     <path d="M4 11H2v3h2zm5-4H7v7h2zm5-5v12h-2V2zm-2-1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM6 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1zm-5 4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1z"/>
                   </svg></div> 
-                <a class="navbar-brand" href="#">G7 Capital</a>
+                <a class="navbar-brand" href="#">Gov Capital</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -56,15 +56,15 @@ href="./styles.css"
 
         <div class="container my-5">
             <div class="p-5 text-center bg-body-tertiary rounded-3">
-               <div> <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="darkred" class="bi bi-bar-chart" viewBox="0 0 16 16">
+               <div> <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="darkblue" class="bi bi-bar-chart" viewBox="0 0 16 16">
                     <path d="M4 11H2v3h2zm5-4H7v7h2zm5-5v12h-2V2zm-2-1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM6 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1zm-5 4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1z"/>
                   </svg></div>
               <h1 class="text-body-emphasis">About Us</h1>
               <p class="col-lg-8 mx-auto fs-5 text-muted">
-              G<span style="color: red;">7</span> Capital was created with a view to offer investors an alternative product to shares, bonds, property and other traditional investment options. Founded by an entrepreneur with a background in professional sports and gaming. Our fund focuses on the emerging markets of sports and investment.
+              <span style="color: rgb(0, 101, 173);">Gov</span> Capital was created with a view to offer investors an alternative product to shares, bonds, property and other traditional investment options. Founded by an entrepreneur with a background in professional sports and gaming. Our fund focuses on the emerging markets of sports and investment.
             </p>
               <div class="d-inline-flex gap-2 mb-5">
-                <a href="./contact.html" type="button" class="btn btn-lg px-4 rounded-pill gap-3" style="background-color: rgb(132, 0, 0); color: white;">Contact Us</a>
+                <a href="./contact.html" type="button" class="btn btn-lg px-4 rounded-pill gap-3" style="background-color: rgb(0, 67, 138); color: white;">Contact Us</a>
               
                 <a href="./index.html" type="button" class="btn btn-outline-secondary btn-lg px-4 rounded-pill">Home</a>
               </div>
@@ -88,7 +88,7 @@ href="./styles.css"
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
                 <li class="nav-item"><a href="./about.html" class="nav-link px-2 text-body-secondary">About</a></li>
               </ul>
-              <p class="text-center text-body-secondary">© 2024 Trident Solutions</p>
+              <p class="text-center text-body-secondary"><a href="#" class="nav-link px-2 text-body-secondary">© 2024 Trident Solutions Ltd</a></p>
             </footer>
           </div>
     </section>
