contact info update

--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@ href="./styles.css"
                         <li>Durban</li>
                         <li>Kwa-Zulu-Natal</li>
                         <li>South Africa</li>
-                        <li>Phone: 031 - number</li>
+                        <li>Phone: 078 962 0767</li>
                        
                       </ul></p>
                     </div>
@@ -98,8 +98,8 @@ href="./styles.css"
                       <h6 class="mb-2">Investor Relations</h6>
                       <p class="mb-0 opacity-75"><ul style="list-style-type:none;">
                         <li>For investor inquiries, please contact :</li>
-                        <li>Email: primary@email.com</li>
-                        <li>Phone: 031 - number</li>
+                        <li>Email: Ryan.govcapital@outlook.com</li>
+                        <li>Phone: 078 962 0767</li>
                       </ul></p>
                     </div>
                     
@@ -108,8 +108,8 @@ href="./styles.css"
               </div>
               <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                 <div class="d-flex gap-2 justify-content-center py-5">
-                  <a href="mailto:address@email.com" type="button" class="btn btn-lg px-4 gap-3" style="background-color: black; color: gold; outline: 2px solid gold; outline-offset: 2px;">Email</a>
-                  <a href="tel:number" type="button" class="btn btn-lg px-4 gap-3 mx-2" style="background-color: black; color: gold; outline: 2px solid gold; outline-offset: 2px;">Phone</a>
+                  <a href="mailto:Ryan.govcapital@outlook.com" type="button" class="btn btn-lg px-4 gap-3" style="background-color: black; color: gold; outline: 2px solid gold; outline-offset: 2px;">Email</a>
+                  <a href="tel:0789620767" type="button" class="btn btn-lg px-4 gap-3 mx-2" style="background-color: black; color: gold; outline: 2px solid gold; outline-offset: 2px;">Phone</a>
                   </div>
              </div>
           </div>
