minor grammar update

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ href="./styles.css"
           </svg>
         <h1 class="display-5 fw-bold " style="color: rgb(230, 195, 0);">Our Aspirations</h1>
         <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4" style="color: white;"><span style="color: gold;">Gov</span> Capital are fund managers whose investment world centres on sports and events.In this sector, we provide unparalleled investment intelligence, funds management experstise through the use of emerging technologies and outstanding customer service.</p>
+          <p class="lead mb-4" style="color: white;"><span style="color: gold;">Gov</span> Capital are fund managers whose investment world centres on sports and events. In this sector, we provide unparalleled investment intelligence, funds management expertise through the use of emerging technologies and outstanding customer service.</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
             <a href="./services.html" type="button" class="btn btn-lg px-4 gap-3" style="background-color: black; color: gold; outline: 2px solid gold; outline-offset: 2px;">
               View Our Services
